--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -8,7 +8,7 @@
 
 .card-list {
 	width: 85vw;
-	margin: 0 auto;
+	margin: 3rem auto 5rem;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-gap: 1.5rem;
