--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -10,8 +10,8 @@
       display:flex;
       align-items: center;
       flex-direction: column;
-      border-radius:10px;
-      padding:25px;
+      border-radius:0.5rem;
+      padding:1.5rem;
       cursor: pointer;
      -moz-osx-font-smoothing:grayscale;
      backface-visibility: hidden;
@@ -32,16 +32,16 @@
  }
 
  .card-container h2{
-     font-size: 3rem;
+     font-size: 2.5rem;
      font-family: "Bigelow Rules";
      margin-bottom: 0;
-     color:#0dd3b9;
+     color:#28ffe3;
      text-shadow:3px 3px 0 #006661
  }
 
  .card-container p{
       font-family: "Segoe UI Light";
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: #71ffec;
  }
 
