--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -1,22 +1,25 @@
-.search-box-container{
-     margin-bottom: 3rem;
+.search-box-container {
+	margin-bottom: 3rem;
 }
 
-.search-box{
-     -webkit-appearance: none;
-     border:3px solid #eee;
-     outline:none;
-     padding: 10px;
-     min-width:10vw;
-     line-height: 30px;
-     margin: 0 auto;
-     border-radius: 0.5rem;
-     background: #fafafa;
-     font-family: "Tahoma";
-     font-size: 1.2rem;
-     box-shadow: 0 0 20px rgb(18 0 49);
+.search-box {
+	-webkit-appearance: none;
+	border: 3px solid #dca6ff;
+	outline: none;
+	padding: 10px;
+	min-width: 10vw;
+	line-height: 30px;
+	margin: 0 auto;
+	border-radius: 0.5rem;
+	background: #fafafa;
+	font-family: "Tahoma";
+	font-size: 1.2rem;
 }
 
-.search-box:hover{
-     background: #fff;
+.search-box:hover {
+	background: #fff;
+}
+
+.search-box:focus {
+	box-shadow: 0 0 20px rgb(18 0 49);
 }
