Body background fixed

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background: url("https://images.pexels.com/photos/1616403/pexels-photo-1616403.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
-		center/cover;
+		center/cover fixed;
 }
 
 code {
