--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -8,12 +8,11 @@
 	outline: none;
 	padding: 10px;
 	min-width: 10vw;
-	line-height: 30px;
 	margin: 0 auto;
 	border-radius: 0.5rem;
 	background: #fafafa;
 	font-family: "Tahoma";
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 
 .search-box:hover {
@@ -21,5 +20,5 @@
 }
 
 .search-box:focus {
-	box-shadow: 0 0 20px #fe01ac;
+	box-shadow: 0 0 20px #000;
 }
