Shadow in cards

--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -17,7 +17,8 @@
 	backface-visibility: hidden;
 	transform: translateZ(0);
 	transition: transform 0.25s ease-out;
-	background: linear-gradient(rgb(220 12 152 / 1), rgb(61 7 109 / 0.7));
+     background: linear-gradient(rgb(220 12 152 / 1), rgb(61 7 109 / 0.7));
+     box-shadow: 0 10px 10px #180025;
 }
 
 .card-container:hover {
